# cv-builder-v0

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: lint.yml  tests.yml
app/: main.py  template.py
app/core/: __init__.py  config.py  constants.py  schemas.py  state.py
app/handlers/: __init__.py  education.py  experience.py  finalize.py  personal_info.py  skills.py
app/services/: __init__.py  pdf.py  redis_store.py  validation.py  workflow.py  workflow_v2.py
app/tools/: resume_tools.py
app/utils/: __init__.py  text.py
app/web/: app.py  templates.py  websocket.py
tests/: test_handlers.py  test_redis_store.py  test_state.py  test_web.py  test_workflow.py
